# baxter_platform

./: .rosinstall  .rosinstall.bak  baxter_platform.sh  test.py
baxter/: baxter.sh
baxter_real_platform/: commands.txt
baxter_sim_platform/: CMakeLists.txt  package.xml
baxter_sim_platform/models/: bouncy_ball.sdf  camera.sdf  delete_later.sdf  example_block.sdf
baxter_sim_platform/scripts/: .camera.sdf.swp  bash_aliases.txt  main.py  noisydata.csv  physics_tests.py  robot_controller.py  scene_controller.py  server.py  test.py  test.sdf  trajectory.py  utils.py
baxter_sim_platform/scripts/legacy/: physics_tests.py
deprecated/: deprecated.py  pick_and_place.py
dev/: MUJOCO_LOG.TXT  breakout.py  breakout_0.pth  breakout_1000.pth  breakout_10500.pth  breakout_11500.pth  breakout_12500.pth  breakout_13500.pth  breakout_14000.pth  breakout_1500.pth  breakout_15500.pth  breakout_16000.pth  breakout_17500.pth  breakout_18000.pth  breakout_19500.pth  breakout_2000.pth  breakout_20000.pth  breakout_21500.pth  breakout_22000.pth  breakout_23500.pth  breakout_24500.pth  breakout_2500.pth  breakout_3000.pth  breakout_3500.pth  breakout_4000.pth  breakout_4500.pth  breakout_500.pth  breakout_5000.pth  breakout_6500.pth  breakout_7500.pth  breakout_8500.pth  breakout_9000.pth  cartpole.py  delete_initial_target_net  dqn.py  fetchpush.py  log.txt  openai_dqn.py  pacman.py  pacman_0_0.pth  (+58 more)
dqn/: dqn.py  old_continuous_dqn.py  pacman.py  scene_generator.py
installation/: README.txt  baxter_platform.sh  baxter_platform_bashrc.bash  baxter_platform_build.sh  (+2 more)
(+143 files in other folders)
